log
Tue 18 Apr 2023 04:03:23 AM UTC: 
 tests:  0|5
total_score: 0/70
fe68dd6
Sat 22 Apr 2023 04:59:10 PM UTC: 
 sudoku.c | 23 +++++++++++++++++------
 1 file changed, 17 insertions(+), 6 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:53:25: error: statement with no effect [-Werror=unused-value]
   53 |           n->sudo[i][j] == aux;
      |           ~~~~~~~~~~~~~~^~~~~~
sudoku.c:56:20: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   56 |           pushBack(lista, nuevoNodo);
      |                    ^~~~~
      |                    list
sudoku.c:56:20: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
9c58301
Sat 22 Apr 2023 04:59:19 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:56:20: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   56 |           pushBack(lista, nuevoNodo);
      |                    ^~~~~
      |                    list
sudoku.c:56:20: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
5cd47d7
Sat 22 Apr 2023 04:59:22 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
39bbf1a
Sat 22 Apr 2023 04:59:46 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
15ff41d
Sat 22 Apr 2023 05:01:45 PM UTC: 
 sudoku.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:48:9: error: unused variable ‘aux’ [-Werror=unused-variable]
   48 |     int aux = 1;
      |         ^~~
cc1: all warnings being treated as errors
Compilation failed
eb827d7
Sat 22 Apr 2023 05:01:52 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|4
total_score: 15/70
8a357db
